# Almost all CMake files should start with this
# You should always specify a range with the newest
# and oldest tested versions of CMake. This will ensure
# you pick up the best policies.
cmake_minimum_required(VERSION 3.15...4.0)

# This is your project statement. You should always list languages;
# Listing the version is nice here since it sets lots of useful variables
project(
  liblcf
  VERSION 1.0
  LANGUAGES CXX)

add_library(liblcf STATIC 
    dbarray.cpp
    dbstring_struct.cpp
    encoder.cpp
    generated/ldb_actor.cpp
    generated/ldb_animation.cpp
    generated/ldb_animationcelldata.cpp
    generated/ldb_animationframe.cpp
    generated/ldb_animationtiming.cpp
    generated/ldb_attribute.cpp
    generated/ldb_battlecommand.cpp
    generated/ldb_battlecommands.cpp
    generated/ldb_battleranimation.cpp
    generated/ldb_battleranimationitemskill.cpp
    generated/ldb_battleranimationpose.cpp
    generated/ldb_battleranimationweapon.cpp
    generated/ldb_chipset.cpp
    generated/ldb_class.cpp
    generated/ldb_commonevent.cpp
    generated/ldb_database.cpp
    generated/ldb_enemy.cpp
    generated/ldb_enemyaction.cpp
    generated/ldb_item.cpp
    generated/ldb_learning.cpp
    generated/ldb_music.cpp
    generated/ldb_skill.cpp
    generated/ldb_sound.cpp
    generated/ldb_state.cpp
    generated/ldb_switch.cpp
    generated/ldb_system.cpp
    generated/ldb_terms.cpp
    generated/ldb_terrain.cpp
    generated/ldb_testbattler.cpp
    generated/ldb_troop.cpp
    generated/ldb_troopmember.cpp
    generated/ldb_trooppage.cpp
    generated/ldb_trooppagecondition.cpp
    generated/ldb_variable.cpp
    generated/lmt_encounter.cpp
    generated/lmt_mapinfo.cpp
    generated/lmt_start.cpp
    generated/lmu_event.cpp
    generated/lmu_eventpage.cpp
    generated/lmu_eventpagecondition.cpp
    generated/lmu_map.cpp
    generated/lmu_moveroute.cpp
    generated/lsd_save.cpp
    generated/lsd_saveactor.cpp
    generated/lsd_savecommonevent.cpp
    generated/lsd_saveeasyrpgdata.cpp
    generated/lsd_saveeasyrpgtext.cpp
    generated/lsd_saveeasyrpgwindow.cpp
    generated/lsd_saveeventexecframe.cpp
    generated/lsd_saveeventexecstate.cpp
    generated/lsd_saveinventory.cpp
    generated/lsd_savemapevent.cpp
    generated/lsd_savemapeventbase.cpp
    generated/lsd_savemapinfo.cpp
    generated/lsd_savepanorama.cpp
    generated/lsd_savepartylocation.cpp
    generated/lsd_savepicture.cpp
    generated/lsd_savescreen.cpp
    generated/lsd_savesystem.cpp
    generated/lsd_savetarget.cpp
    generated/lsd_savetitle.cpp
    generated/lsd_savevehiclelocation.cpp
    generated/rpg_actor.cpp
    generated/rpg_animation.cpp
    generated/rpg_animationcelldata.cpp
    generated/rpg_animationframe.cpp
    generated/rpg_animationtiming.cpp
    generated/rpg_attribute.cpp
    generated/rpg_battlecommand.cpp
    generated/rpg_battlecommands.cpp
    generated/rpg_battleranimation.cpp
    generated/rpg_battleranimationitemskill.cpp
    generated/rpg_battleranimationpose.cpp
    generated/rpg_battleranimationweapon.cpp
    generated/rpg_chipset.cpp
    generated/rpg_class.cpp
    generated/rpg_commonevent.cpp
    generated/rpg_database.cpp
    generated/rpg_encounter.cpp
    generated/rpg_enemy.cpp
    generated/rpg_enemyaction.cpp
    generated/rpg_enums.cpp
    generated/rpg_equipment.cpp
    generated/rpg_event.cpp
    generated/rpg_eventcommand.cpp
    generated/rpg_eventpage.cpp
    generated/rpg_eventpagecondition.cpp
    generated/rpg_item.cpp
    generated/rpg_learning.cpp
    generated/rpg_map.cpp
    generated/rpg_mapinfo.cpp
    generated/rpg_movecommand.cpp
    generated/rpg_moveroute.cpp
    generated/rpg_music.cpp
    generated/rpg_parameters.cpp
    generated/rpg_rect.cpp
    generated/rpg_save.cpp
    generated/rpg_saveactor.cpp
    generated/rpg_savecommonevent.cpp
    generated/rpg_saveeasyrpgdata.cpp
    generated/rpg_saveeasyrpgtext.cpp
    generated/rpg_saveeasyrpgwindow.cpp
    generated/rpg_saveeventexecframe.cpp
    generated/rpg_saveeventexecstate.cpp
    generated/rpg_saveinventory.cpp
    generated/rpg_savemapevent.cpp
    generated/rpg_savemapeventbase.cpp
    generated/rpg_savemapinfo.cpp
    generated/rpg_savepanorama.cpp
    generated/rpg_savepartylocation.cpp
    generated/rpg_savepicture.cpp
    generated/rpg_savescreen.cpp
    generated/rpg_savesystem.cpp
    generated/rpg_savetarget.cpp
    generated/rpg_savetitle.cpp
    generated/rpg_savevehiclelocation.cpp
    generated/rpg_skill.cpp
    generated/rpg_sound.cpp
    generated/rpg_start.cpp
    generated/rpg_state.cpp
    generated/rpg_switch.cpp
    generated/rpg_system.cpp
    generated/rpg_terms.cpp
    generated/rpg_terrain.cpp
    generated/rpg_testbattler.cpp
    generated/rpg_treemap.cpp
    generated/rpg_troop.cpp
    generated/rpg_troopmember.cpp
    generated/rpg_trooppage.cpp
    generated/rpg_trooppagecondition.cpp
    generated/rpg_variable.cpp
    ldb_equipment.cpp
    ldb_eventcommand.cpp
    ldb_parameters.cpp
    ldb_reader.cpp
    lmt_reader.cpp
    lmt_rect.cpp
    lmt_treemap.cpp
    lmu_movecommand.cpp
    lmu_reader.cpp
    log_handler.cpp
    lsd_reader.cpp
    reader_flags.cpp
    reader_lcf.cpp
    reader_util.cpp
    reader_xml.cpp
    rpg_setup.cpp
    rpg_terms_generated.cpp
    saveopt.cpp
    writer_lcf.cpp
    writer_xml.cpp
)

#include paths
target_include_directories(
        liblcf
        PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/generated
        ${CMAKE_CURRENT_SOURCE_DIR}/
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lmt
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lmu
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg
)

target_sources(
        liblcf
        PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/dbarray.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/dbstring_struct.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/encoder.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_actor.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_animation.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_animationcelldata.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_animationframe.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_animationtiming.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_attribute.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_battlecommand.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_battlecommands.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_battleranimation.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_battleranimationitemskill.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_battleranimationpose.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_battleranimationweapon.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_chipset.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_class.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_commonevent.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_database.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_enemy.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_enemyaction.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_item.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_learning.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_music.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_skill.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_sound.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_state.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_switch.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_system.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_terms.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_terrain.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_testbattler.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_troop.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_troopmember.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_trooppage.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_trooppagecondition.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/ldb_variable.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lmt_encounter.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lmt_mapinfo.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lmt_start.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lmu_event.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lmu_eventpage.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lmu_eventpagecondition.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lmu_map.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lmu_moveroute.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_save.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_saveactor.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_savecommonevent.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_saveeasyrpgdata.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_saveeasyrpgtext.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_saveeasyrpgwindow.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_saveeventexecframe.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_saveeventexecstate.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_saveinventory.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_savemapevent.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_savemapeventbase.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_savemapinfo.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_savepanorama.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_savepartylocation.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_savepicture.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_savescreen.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_savesystem.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_savetarget.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_savetitle.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/lsd_savevehiclelocation.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_actor.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_animation.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_animationcelldata.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_animationframe.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_animationtiming.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_attribute.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_battlecommand.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_battlecommands.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_battleranimation.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_battleranimationitemskill.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_battleranimationpose.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_battleranimationweapon.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_chipset.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_class.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_commonevent.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_database.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_encounter.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_enemy.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_enemyaction.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_enums.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_equipment.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_event.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_eventcommand.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_eventpage.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_eventpagecondition.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_item.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_learning.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_map.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_mapinfo.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_movecommand.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_moveroute.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_music.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_parameters.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_rect.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_save.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_saveactor.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_savecommonevent.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_saveeasyrpgdata.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_saveeasyrpgtext.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_saveeasyrpgwindow.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_saveeventexecframe.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_saveeventexecstate.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_saveinventory.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_savemapevent.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_savemapeventbase.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_savemapinfo.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_savepanorama.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_savepartylocation.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_savepicture.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_savescreen.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_savesystem.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_savetarget.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_savetitle.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_savevehiclelocation.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_skill.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_sound.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_start.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_state.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_switch.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_system.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_terms.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_terrain.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_testbattler.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_treemap.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_troop.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_troopmember.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_trooppage.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_trooppagecondition.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/generated/rpg_variable.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ldb_equipment.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ldb_eventcommand.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ldb_parameters.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ldb_reader.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/lmt_reader.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/lmt_rect.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/lmt_treemap.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/lmu_movecommand.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/lmu_reader.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/log_handler.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/lsd_reader.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/reader_flags.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/reader_lcf.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/reader_util.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/reader_xml.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/rpg_setup.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/rpg_terms_generated.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/saveopt.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/writer_lcf.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/writer_xml.cpp
)
